# 2D-Game-Engine

./: '  .gitignore  CMakeLists.txt  README.md  a.out  geometry_game_config_definition.txt  makefile
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
config/: config.txt
config_definitions/: assets.md  geometry_game_config_definition.txt  level.md
example_configs/: assets.txt  level_1.txt
replays/: README.md  replay.txt
src/: Action.hpp  Animation.cpp  Animation.hpp  Assets.cpp  Assets.hpp  Components.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Game.cpp  Game.hpp  GameEngine.cpp  GameEngine.hpp  Physics.cpp  Physics.hpp  Scene.cpp  Scene.hpp  Scene_Menu.cpp  Scene_Menu.hpp  Scene_Play.cpp  Scene_Play.hpp  Vec2.cpp  Vec2.hpp  a.out  config.txt  main.cpp  test.cpp
src/assets/tiles/: block.xcf
tests/: Action.test.cpp  Animation.text.cpp  Components.test.cpp  EntityManager.test.cpp  Physics.test.cpp  Vec2.test.cpp  main.cpp
visualstudio/SFMLGame/: SFMLGame.sln  SFMLGame.vcxproj  SFMLGame.vcxproj.filters  main.cpp
